[gd_scene load_steps=2 format=3 uid="uid://fl3agghxxkj6"]

[ext_resource type="Script" uid="uid://c001n3i5iwhu3" path="res://scripts/computer_panel.gd" id="1_qtbhd"]

[node name="ComputerPanel" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_qtbhd")

[node name="LeftSideBar" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.18
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="LeftSideBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="LeftSideBar/MarginContainer"]
layout_mode = 2

[node name="CenterDisplay" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="CenterDisplay"]
layout_mode = 2

[node name="PC_Image" type="TextureRect" parent="CenterDisplay/MarginContainer"]
layout_mode = 2

[node name="PlayButtonHBox" type="HBoxContainer" parent="CenterDisplay/MarginContainer/PC_Image"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayButton" type="Button" parent="CenterDisplay/MarginContainer/PC_Image/PlayButtonHBox"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 8
text = "Play"
